nixidy/generated/prod/baikal/Deployment-baikal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: baikal
    app.kubernetes.io/instance: baikal
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: baikal
  name: baikal
  namespace: home
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: baikal
      app.kubernetes.io/instance: baikal
      app.kubernetes.io/name: baikal
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: baikal
        app.kubernetes.io/instance: baikal
        app.kubernetes.io/name: baikal
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - secretRef:
                name: baikal
          image: ckulka/baikal:0.10.1-nginx@sha256:434bdd162247cc6aa6f878c9b4dce6216e39e79526b980453b13812d5f8ebf4b
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: baikal
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /var/www/baikal/Specific
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: baikal
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: baikal
