nixidy/generated/prod/baikal/Service-baikal.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: baikal
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: baikal
    app.kubernetes.io/service: baikal
  name: baikal
  namespace: home
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: baikal
    app.kubernetes.io/instance: baikal
    app.kubernetes.io/name: baikal
  type: ClusterIP
